[package]
name = "dod_utils"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/mod.rs"
crate-type = ["lib"]

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
ciborium = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-certified-map = { workspace = true }
ic-stable-structures = { workspace = true }
serde_bytes = { workspace = true }
serde = { workspace = true }
itertools = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true }
bitcoin = { workspace = true }
byteorder = { workspace = true }
base64 = { workspace = true }
simple_asn1 = { workspace = true }
rand = { version = "0.8.5", features = ["std_rng"], default-features = false }

[features]
default = []
debug = []
